--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "node server.js"
   },
   "keywords": [],
@@ -16,5 +16,9 @@
     "nodemon": "^3.1.4",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.4",
+    "vitest": "^4.0.16"
   }
 }
