--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,19 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build bundle
+      run: npm run build --if-present
+    
+    - name: Run Test script
+      run: npm test
+
+    - name: Docker build
+      run: docker build -t ci-cd-test:latest .
+
+    - name: Run Container
+      run: docker run -d -p 3000:5500
+
