--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,8 +42,8 @@ jobs:
 
     - name: BUILD & PUSH TO HUB
       env:
-         DOCKER_USERNAME: ${{secret.DOCKER_USERNAME}}
-         DOCKER_PASSWORD: ${{secret.DOCKER_PASSWORD}}
+         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |  
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
