--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,9 +47,19 @@ jobs:
          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |  
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
-        docker push $DOCKER_USERNAME/ci-cd-test:latest
+        # docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
+        # docker push $DOCKER_USERNAME/ci-cd-test:latest
 
+        docker compose -f docker-compose.yml build
+        docker compose -f docker-compose.yml up
     
 
 
+
+
+  #  run: |  
+  #       echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  #       docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
+  #       docker push $DOCKER_USERNAME/ci-cd-test:latest
+
+    
