--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
         # docker push $DOCKER_USERNAME/ci-cd-test:latest
 
         docker compose -f docker-compose.yml build
-        docker compose -f docker-compose.yml up
+        docker compose -f docker-compose.yml up -d
     
 
 
