tag based deploy

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,9 +3,14 @@
 
 name: ci-cd pipeline
 
+# on:
+#   push:
+#     branches: [ "master" ]
+
 on:
   push:
-    branches: [ "master" ]
+    tags:
+      - "v*"
 
 jobs:
   build:
