--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,34 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: ci-cd pipeline
+name: ci-cd pipeline for python application
+
+# NODE JS -->
 
 # on:
 #   push:
 #     branches: [ "master" ]
 
+
+# on:
+#   push:
+#     tags:
+#       - "v*"
+
+
+
+#PYTHON -->
+
 on:
   push:
-    tags:
-      - "v*"
+    branches: ['py-test']
+
 
 jobs:
   build:
 
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    # runs-on: self-hosted
 
     strategy:
       matrix:
