--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,19 +3,6 @@
 
 name: ci-cd pipeline for python application
 
-# NODE JS -->
-
-# on:
-#   push:
-#     branches: [ "master" ]
-
-
-# on:
-#   push:
-#     tags:
-#       - "v*"
-
-
 
 #PYTHON -->
 
@@ -32,25 +19,24 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [22.16.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        python-version: [3.11.14] 
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - name: Use Python version ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
     - name: Install dependencies
-      run: npm ci
+      run: pip install -e .
     
-    - name: Build bundle
-      run: npm run build --if-present
-    
-    - name: Run Test script
-      run: npm test
+    - name: Test dependencies
+      run: pip install -e ".[dev]"
+
+    - name: Run Pytest
+      run: pytest
 
     # - name: Docker build
     #   run: docker build -t ci-cd-test:latest .
@@ -58,26 +44,21 @@ jobs:
     # - name: Run Container
     #   run: docker run -d -p 3000:5500 ci-cd-test:latest
 
-    - name: BUILD & PUSH TO HUB
-      env:
-         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: |  
-        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        # docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
-        # docker push $DOCKER_USERNAME/ci-cd-test:latest
+    # - name: BUILD & PUSH TO HUB
+    #   env:
+    #      DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+    #      DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+    #   run: |  
+    #     echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    #     # docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
+    #     # docker push $DOCKER_USERNAME/ci-cd-test:latest
 
-        docker compose -f docker-compose.yml build
-        docker compose -f docker-compose.yml up -d
+    #     docker compose -f docker-compose.yml build
+    #     docker compose -f docker-compose.yml up -d
     
 
 
 
-
-  #  run: |  
-  #       echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  #       docker build -t $DOCKER_USERNAME/ci-cd-test:latest .
-  #       docker push $DOCKER_USERNAME/ci-cd-test:latest
 
     
 
