--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,8 @@ jobs:
 
     - name: DOCKER BUILD & RUN 
       run : |
-        docker compose -f docker-compose.yml build
-        docker compose -f docker-compose.yml up -d
+        docker compose --profile app -f docker-compose.yml build
+        docker compose --profile app -f docker-compose.yml up -d
 
     # - name: Docker build
     #   run: docker build -t ci-cd-test:latest .
