dns ip mismatch issue resolved

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,9 +18,13 @@ http {
         listen 80;
         # server_name 192.168.1.62;
         # server_name 44.249.10.132;
-        server_name cicd-testing.inesssolutions.net
 
-        include /etc/nginx/mime.types
+        # server_name bala.au
+
+        server_name cicd-testing.inesssolutions.net
+        
+
+        include /etc/nginx/mime.types;
         include /etc/nginx/conf.d/*.conf;
 
          
