--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 
         # server_name bala.au
 
-        server_name cicd-testing.inesssolutions.net
+        server_name cicd-testing.inesssolutions.net;
         
 
         include /etc/nginx/mime.types;
