--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,15 @@ jobs:
         docker compose --profile app -f docker-compose.yml build
         docker compose --profile app -f docker-compose.yml up -d
 
+    - name: certificate installation
+      run: |
+        docker compose stop nginx-server
+        docker compose up -d nginx
+        docker compose run --rm certbot
+        docker compose restart nginx
+
+
+
     # - name: Docker build
     #   run: docker build -t ci-cd-test:latest .
 
