--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,14 @@ http {
         include /etc/nginx/mime.types;
         include /etc/nginx/conf.d/*.conf;
 
+        location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+          }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
          
         # log_format json_combined escape=json '{'
         #     '"time_local":"$time_local",'
@@ -44,7 +52,19 @@ http {
         
         # access_log /var/log/nginx/access.log json_combined;
 
-        location / {
+       
+    }
+
+    servre {
+
+        listen 443 ssl;
+        server_name cicd-testing.inesssolutions.net;
+
+        ssl_certificate /etc/letsencrypt/live/cicd-testing.inesssolutions.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cicd-testing.inesssolutions.net/privkey.pem;
+
+
+         location / {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
