conf file name bug fixed

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,7 +55,7 @@ http {
        
     }
 
-    servre {
+    server {
 
         listen 443 ssl;
         server_name cicd-testing.inesssolutions.net;
