ip redirection issue fixed

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,13 +15,12 @@ http {
 
 
     server {
-        listen 80;
+        listen 80 default_server;
+
         # server_name 192.168.1.62;
         # server_name 44.249.10.132;
 
-        # server_name bala.au
-
-        server_name cicd-testing.inesssolutions.net;
+        server_name _;
         
 
         include /etc/nginx/mime.types;
