ip redirection issue fixed

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
           }
 
         location / {
-            return 301 https://$host$request_uri;
+            return 301 https://cicd-testing.inesssolutions.net$request_uri;
         }
 
          
