ip redirection issue fixed

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,7 +63,7 @@ http {
 
        server {
 
-        listen 443 ssl;
+        listen 443 ssl default_server;
         server_name cicd-testing.inesssolutions.net;
 
         ssl_certificate /etc/letsencrypt/live/cicd-testing.inesssolutions.net/fullchain.pem;
