ip redirection issue fixed

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,79 +5,49 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
 
     upstream backend {
-         server pipeline:8000;
-        #  server localhost:8001;
-        #  server localhost:8002;
+        server pipeline:8000;
     }
+
+    include /etc/nginx/conf.d/*.conf;
 
 
 
     server {
         listen 80 default_server;
-
-        # server_name 192.168.1.62;
-        # server_name 44.249.10.132;
-
         server_name _;
-        
 
-        include /etc/nginx/mime.types;
-        include /etc/nginx/conf.d/*.conf;
-
+        # certbot renewal
         location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-          }
+            root /var/www/certbot;
+        }
 
+        # ALL HTTP → domain HTTPS
         location / {
             return 301 https://cicd-testing.inesssolutions.net$request_uri;
         }
-
-         
-        # log_format json_combined escape=json '{'
-        #     '"time_local":"$time_local",'
-        #     '"remote_addr":"$remote_addr",'
-        #     '"request":"$request",'
-        #     '"status": "$status",'     
-        #     '"body_bytes_sent":"$body_bytes_sent",'
-        #     '"http_referer":"$http_referer",'
-        #     '"http_user_agent":"$http_user_agent",'
-        #     '"request_time":"$request_time",'
-        #     '"upstream_response_time":"$upstream_response_time",'
-        #     '"upstream_addr":"$upstream_addr",'
-        #     '"upstream_status":"$upstream_status"'
-        # '}';
-        
-        # access_log /var/log/nginx/access.log json_combined;
-
-        # location / {
-        #     proxy_pass http://backend;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-
-        # }
     }
 
-       server {
 
-        listen 443 ssl default_server;
+
+    server {
+        listen 443 ssl;
         server_name cicd-testing.inesssolutions.net;
 
         ssl_certificate /etc/letsencrypt/live/cicd-testing.inesssolutions.net/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cicd-testing.inesssolutions.net/privkey.pem;
 
-
-         location / {
+        location / {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
+            proxy_set_header X-Forwarded-Proto https;
         }
+    }
+
     }
 
    
