--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,8 @@ jobs:
         docker compose --profile app -f docker-compose.yml build
         docker compose --profile app -f docker-compose.yml up -d
 
+        docker compose restart nginx
+
     
 
     # - name: Docker build
