--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,8 +7,12 @@ events {
 http {
     include /etc/nginx/mime.types;
 
-    upstream backend {
-        server pipeline:8000;
+    upstream frontend {
+        server termtrix:3000;
+    }
+
+    upstream streamer_ws {
+        server streamer:5500;
     }
 
     include /etc/nginx/conf.d/*.conf;
@@ -40,7 +44,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/cicd-testing.inesssolutions.net/privkey.pem;
 
         location / {
-            proxy_pass http://backend;
+            proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
