--- a/.github/workflows/.node.js.yml
+++ b/.github/workflows/.node.js.yml
@@ -30,11 +30,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Install dependencies
-        run: cd my-app && npm ci
+      # - name: Install dependencies
+      #   run: cd my-app && npm ci
 
-      - name: Build bundle
-        run: cd my-app && npm run build --if-present
+      # - name: Build bundle
+      #   run: cd my-app && npm run build --if-present
 
       - name: BUILD & RUN
         run: |
