--- a/.github/workflows/.node.js.yml
+++ b/.github/workflows/.node.js.yml
@@ -24,13 +24,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: my-app/package-lock.json  # Add this
-          working-directory: ./my-app
+          cache-dependency-path: my-app/package-lock.json
+      
 
       - name: Install dependencies
         working-directory: ./my-app
