--- a/.github/workflows/.node.js.yml
+++ b/.github/workflows/.node.js.yml
@@ -41,9 +41,9 @@ jobs:
         working-directory: ./my-app
         run: npm ci
 
-      - name: Build app
-        working-directory: ./my-app
-        run: npm run build --if-present
+      # - name: Build app
+      #   working-directory: ./my-app
+      #   run: npm run build --if-present
 
       - name: BUILD & RUN
         run: |
